--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-hook-form": "^7.42.0",
     "react-native": "0.71.0",
     "react-native-calendars": "^1.1293.0",
+    "react-native-date-picker": "^4.2.10",
     "react-native-element-dropdown": "^2.6.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-material-dropdown": "^0.11.1",
